--- a/app.ipynb
+++ b/app.ipynb
@@ -506,11 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a simple feed-forward neural network\n",
+    "# Simple feed-forward neural network\n",
     "class PhishingModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
     "        super(PhishingModel, self).__init__()\n",
