--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,13 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 31.,  24.,   0., ..., 119.,   0., 124.],\n",
-       "       [ 23.,  16.,   0., ...,  39.,   0., 217.],\n",
-       "       [ 29.,  22.,   0., ...,  42.,   2.,   5.],\n",
-       "       ...,\n",
-       "       [ 30.,  23.,   0., ...,  58.,   2.,  67.],\n",
-       "       [ 55.,  47.,   0., ...,   0.,   0.,   0.],\n",
-       "       [ 33.,  26.,   0., ..., 256.,   0., 261.]], shape=(235795, 50))"
+       "50"
       ]
      },
      "execution_count": 10,
@@ -503,7 +497,7 @@
     }
    ],
    "source": [
-    "X"
+    "len(X[0])"
    ]
   },
   {
