Created class around new model and connecteed it to the API

--- a/model2.ipynb
+++ b/model2.ipynb
@@ -967,6 +967,116 @@
     "joblib.dump(scaler, 'scaler2.pkl')\n",
     "print(\"✅ Scaler saved successfully.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PhishingModel(\n",
+       "  (fc1): Linear(in_features=42, out_features=64, bias=True)\n",
+       "  (relu): ReLU()\n",
+       "  (fc2): Linear(in_features=64, out_features=32, bias=True)\n",
+       "  (fc3): Linear(in_features=32, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_size = 42  # Change this if your dataset has a different number of features\n",
+    "model = PhishingModel(input_size)\n",
+    "\n",
+    "# Load the saved weights\n",
+    "model.load_state_dict(torch.load(\"phishing_model_2.pth\"))\n",
+    "\n",
+    "# Set the model to evaluation mode\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from feature_extractor import extract_features\n",
+    "\n",
+    "features = extract_features(\"https://www.uni-mainz.de\")\n",
+    "features\n",
+    "scaler = StandardScaler()\n",
+    "scaled_features = scaler.fit_transform(np.array([features]))\n",
+    "scaled_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_tensor = torch.tensor(scaled_features, dtype=torch.float32).reshape(1, -1)\n",
+    "feature_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    output = model(feature_tensor)\n",
+    "    prediction = torch.argmax(output, dim=1).item()  # Get class label (0 or 1)\n",
+    "\n",
+    "print(f\"Predicted class: {prediction}\")"
+   ]
   }
  ],
  "metadata": {
